--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -19,6 +19,7 @@
 
 <script src="components/login.js"></script>
 <script src="components/home.js"></script>
+<script src="components/register.js"></script>
 <script src="js/app.js"></script>
 
 </body>
