--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -21,6 +21,7 @@
 <script src="components/home.js"></script>
 <script src="components/register.js"></script>
 <script src="components/addcenters.js"></script>
+<script src="components/allusers.js"></script>
 <script src="js/app.js"></script>
 
 </body>
