[NEW] Added a way to add coaches and some fixes

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -23,6 +23,7 @@
 <script src="components/addcenters.js"></script>
 <script src="components/allusers.js"></script>
 <script src="components/addmanager.js"></script>
+<script src="components/addcoaches.js"></script>
 <script src="js/app.js"></script>
 
 </body>
