[NEW] Added form to add workouts

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -24,6 +24,7 @@
 <script src="components/allusers.js"></script>
 <script src="components/addmanager.js"></script>
 <script src="components/addcoaches.js"></script>
+<script src="components/addworkouts.js"></script>
 <script src="js/app.js"></script>
 
 </body>
