[NEW] Added a way for manager to see his facility overview

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -25,6 +25,7 @@
 <script src="components/addmanager.js"></script>
 <script src="components/addcoaches.js"></script>
 <script src="components/addworkouts.js"></script>
+<script src="components/facilityoverview.js"></script>
 <script src="js/app.js"></script>
 
 </body>
