--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -27,6 +27,7 @@
 <script src="components/addworkouts.js"></script>
 <script src="components/facilityoverview.js"></script>
 <script src="components/editworkout.js"></script>
+<script src="components/editprofile.js"></script>
 <script src="js/app.js"></script>
 
 </body>
