--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>SportsCenters</title>
+    <script src="https://cdn.jsdelivr.net/npm/ol@v7.1.0/dist/ol.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.1.0/ol.css">
+
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
 <body>
