--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -31,6 +31,8 @@
 <script src="components/facilityoverview.js"></script>
 <script src="components/editworkout.js"></script>
 <script src="components/editprofile.js"></script>
+<script src="components/workouts.js"></script>
+<script src="components/center.js"></script>
 <script src="js/app.js"></script>
 
 </body>
