[NEW] Added a way to list all subscription

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -33,6 +33,7 @@
 <script src="components/editprofile.js"></script>
 <script src="components/workouts.js"></script>
 <script src="components/center.js"></script>
+<script src="components/subscriptions.js"></script>
 <script src="js/app.js"></script>
 
 </body>
