--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -34,6 +34,7 @@
 <script src="components/workouts.js"></script>
 <script src="components/center.js"></script>
 <script src="components/subscriptions.js"></script>
+<script src="components/promocodes.js"></script>
 <script src="js/app.js"></script>
 
 </body>
