--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -35,6 +35,7 @@
 <script src="components/center.js"></script>
 <script src="components/subscriptions.js"></script>
 <script src="components/promocodes.js"></script>
+<script src="components/subscription.js"></script>
 <script src="js/app.js"></script>
 
 </body>
