--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -36,6 +36,7 @@
 <script src="components/subscriptions.js"></script>
 <script src="components/promocodes.js"></script>
 <script src="components/subscription.js"></script>
+<script src="components/schedule.js"></script>
 <script src="js/app.js"></script>
 
 </body>
