[NEW] Workout history is now showing on site

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -37,6 +37,7 @@
 <script src="components/promocodes.js"></script>
 <script src="components/subscription.js"></script>
 <script src="components/schedule.js"></script>
+<script src="components/userworkouts.js"></script>
 <script src="js/app.js"></script>
 
 </body>
