[FIX] Fixed movement between pages

--- a/web/sports-centers-2022/static/index.html
+++ b/web/sports-centers-2022/static/index.html
@@ -39,6 +39,7 @@
 <script src="components/schedule.js"></script>
 <script src="components/userworkouts.js"></script>
 <script src="components/comment.js"></script>
+<script src="components/approvecomments.js"></script>
 <script src="js/app.js"></script>
 
 </body>
